@@ -100,6 +100,7 @@ gst_bus_add_watch_full
 gst_bus_add_watch
 gst_bus_async_signal_func
 gst_bus_add_signal_watch
+gst_bus_add_signal_watch_full
 gst_bus_remove_signal_watch
 gst_bus_poll
 <SUBSECTION Standard>
@@ -351,6 +352,11 @@ GST_CLOCK_BROADCAST
 GST_CLOCK_COND
 GST_CLOCK_TIMED_WAIT
 GST_CLOCK_WAIT
+GST_CLOCK_SLAVE_LOCK
+GST_CLOCK_SLAVE_UNLOCK
+gst_clock_add_observation
+gst_clock_set_master
+gst_clock_get_master
 gst_clock_set_resolution
 gst_clock_get_resolution
 gst_clock_get_time
@@ -1094,7 +1100,7 @@ GST_CLASS_LOCK
 GST_CLASS_TRYLOCK
 GST_CLASS_UNLOCK
 GST_OBJECT_LOCK
-GST_TRYLOCK
+GST_OBJECT_TRYLOCK
 GST_OBJECT_UNLOCK
 GST_OBJECT_GET_LOCK
 
@@ -1281,12 +1287,12 @@ gst_pad_stop_task
 
 gst_pad_set_active
 
-GST_STREAM_GET_LOCK
-GST_STREAM_LOCK
-GST_STREAM_LOCK_FULL
-GST_STREAM_TRYLOCK
-GST_STREAM_UNLOCK
-GST_STREAM_UNLOCK_FULL
+GST_PAD_GET_STREAM_LOCK
+GST_PAD_STREAM_LOCK
+GST_PAD_STREAM_LOCK_FULL
+GST_PAD_STREAM_TRYLOCK
+GST_PAD_STREAM_UNLOCK
+GST_PAD_STREAM_UNLOCK_FULL
 GST_FLOW_IS_FATAL
 
 <SUBSECTION Standard>
@@ -1357,15 +1363,15 @@ GST_PAD_QUERYTYPEFUNC
 GST_PAD_SETCAPSFUNC
 GST_PAD_UNLINKFUNC
 
-GST_PREROLL_BROADCAST
-GST_PREROLL_GET_COND
-GST_PREROLL_GET_LOCK
-GST_PREROLL_LOCK
-GST_PREROLL_SIGNAL
-GST_PREROLL_TIMED_WAIT
-GST_PREROLL_TRYLOCK
-GST_PREROLL_UNLOCK
-GST_PREROLL_WAIT
+GST_PAD_PREROLL_BROADCAST
+GST_PAD_GET_PREROLL_COND
+GST_PAD_GET_PREROLL_LOCK
+GST_PAD_PREROLL_LOCK
+GST_PAD_PREROLL_SIGNAL
+GST_PAD_PREROLL_TIMED_WAIT
+GST_PAD_PREROLL_TRYLOCK
+GST_PAD_PREROLL_UNLOCK
+GST_PAD_PREROLL_WAIT
 </SECTION>
 
 
@@ -1401,7 +1407,6 @@ gst_pad_template_get_type
 gst_pad_template_flags_get_type
 gst_pad_template_pad_created
 
-GST_IS_PAD_FAST
 </SECTION>
 
 
@@ -1622,7 +1627,6 @@ gst_registry_scan_path
 gst_registry_get_feature_list
 gst_registry_xml_read_cache
 gst_registry_xml_write_cache
-gst_registry_scan_paths
 gst_registry_get_default
 gst_registry_lookup
 gst_registry_remove_feature
@@ -1658,6 +1662,9 @@ gst_registry_get_type
 GstSegment
 gst_segment_clip
 gst_segment_init
+gst_segment_new
+gst_segment_free
+gst_segment_get_type
 gst_segment_set_duration
 gst_segment_set_last_stop
 gst_segment_set_newsegment
@@ -1665,6 +1672,7 @@ gst_segment_set_seek
 gst_segment_to_running_time
 gst_segment_to_stream_time
 <SUBSECTION Standard>
+GST_TYPE_SEGMENT
 <SUBSECTION Private>
 </SECTION>
 
@@ -1708,6 +1716,7 @@ gst_structure_get_string
 gst_structure_get_date
 gst_structure_get_clock_time
 gst_structure_get_enum
+gst_structure_get_fraction
 gst_structure_map_in_place
 gst_structure_nth_field_name
 gst_structure_set_parent_refcount
@@ -1715,6 +1724,7 @@ gst_structure_to_string
 gst_structure_from_string
 gst_structure_fixate_field_nearest_int
 gst_structure_fixate_field_nearest_double
+gst_structure_fixate_field_nearest_fraction
 gst_structure_fixate_field_boolean
 <SUBSECTION Standard>
 GST_STRUCTURE
@@ -1859,14 +1869,14 @@ gst_tag_merge_mode_get_type
 <TITLE>GstTagSetter</TITLE>
 GstTagSetter
 GstTagSetterIFace
-gst_tag_setter_merge
-gst_tag_setter_add
-gst_tag_setter_add_values
-gst_tag_setter_add_valist
-gst_tag_setter_add_valist_values
-gst_tag_setter_get_list
-gst_tag_setter_set_merge_mode
-gst_tag_setter_get_merge_mode
+gst_tag_setter_merge_tags
+gst_tag_setter_add_tags
+gst_tag_setter_add_tag_values
+gst_tag_setter_add_tag_valist
+gst_tag_setter_add_tag_valist_values
+gst_tag_setter_get_tag_list
+gst_tag_setter_set_tag_merge_mode
+gst_tag_setter_get_tag_merge_mode
 <SUBSECTION Standard>
 GST_TAG_SETTER
 GST_IS_TAG_SETTER
@@ -1997,6 +2007,7 @@ gst_type_find_factory_get_type
 <TITLE>GstUriHandler</TITLE>
 GstURIHandler
 GstURIHandlerInterface
+GstURIType
 GST_URI_TYPE_IS_VALID
 gst_uri_protocol_is_valid
 gst_uri_is_valid
@@ -2061,7 +2072,7 @@ gst_guint64_to_gdouble
 gst_gdouble_to_guint64
 gst_util_dump_mem
 gst_util_uint64_scale
-gst_util_clock_time_scale
+gst_util_uint64_scale_int
 gst_util_set_object_arg
 gst_util_set_value_from_string
 <SUBSECTION Private>
@@ -2115,6 +2126,17 @@ gst_value_set_fraction
 gst_value_get_fraction_numerator
 gst_value_get_fraction_denominator
 gst_value_fraction_multiply
+gst_value_fraction_subtract
+
+<SUBSECTION fractionrange>
+GST_VALUE_HOLDS_FRACTION_RANGE
+GST_TYPE_FRACTION_RANGE
+gst_value_set_fraction_range
+gst_value_get_fraction_range_min
+gst_value_get_fraction_range_max
+gst_value_set_fraction_range_full
+gst_value_fraction_multiply
+
 
 <SUBSECTION date>
 GST_VALUE_HOLDS_DATE
@@ -2176,6 +2198,7 @@ gst_date_get_type
 gst_double_range_get_type
 gst_fourcc_get_type
 gst_fraction_get_type
+gst_fraction_range_get_type
 gst_int_range_get_type
 gst_value_array_get_type
 gst_value_list_get_type
@@ -2277,7 +2300,6 @@ gst_base_src_get_type
 <INCLUDE>gst/base/gstbasesink.h</INCLUDE>
 GstBaseSink
 
-GST_BASE_SINK_CLOCK
 GST_BASE_SINK_PAD
 
 <SUBSECTION Standard>
@@ -2291,15 +2313,6 @@ GST_IS_BASE_SINK_CLASS
 GST_BASE_SINK_GET_CLASS
 <SUBSECTION Private>
 gst_base_sink_get_type
-GST_LIVE_BROADCAST
-GST_LIVE_GET_COND
-GST_LIVE_GET_LOCK
-GST_LIVE_LOCK
-GST_LIVE_SIGNAL
-GST_LIVE_TIMED_WAIT
-GST_LIVE_TRYLOCK
-GST_LIVE_UNLOCK
-GST_LIVE_WAIT
 </SECTION>
 
 
