@@ -101,7 +101,7 @@ typedef enum
  */
 #define GST_OBJECT_LOCK(obj)                   g_mutex_lock(GST_OBJECT_GET_LOCK(obj))
 /**
- * GST_TRYLOCK:
+ * GST_OBJECT_TRYLOCK:
  * @obj: a #Object.
  *
  * This macro will try to obtain a lock on the object, but will return with
